# aagam-mitra-service

./: .env.example  .gitignore  README.md  ingest_all.py  pyproject.toml  render.yaml  temple_ai.db
app/: main.py  models.py
app/api/: router.py
app/api/routes/: assistant.py  chat_history.py  knowledge.py
app/core/: config.py  database.py
app/schemas/: assistant.py  knowledge.py
app/services/: agent.py  assistant.py  chat_history.py  embedder.py  ingest.py  rag.py  vector_store.py
